<resources>
    <string name="app_name">Rose Account Manager</string>

    <string name="add_new_user">Add User</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="comments">Comments</string>
    <string name="date">Date</string>
    <string name="email">Email:</string>
    <string name="email_address">Email Address</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_transaction_description">Please enter transaction description</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_unknown">Unknown</string>
    <string name="last_modified">Last Modified:</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="title_all_transaction_record">All Transactions</string>
    <string name="title_all_user_record">All Users Record</string>
    <string name="title_toolbar_add_user">Add User Data</string>
    <string name="title_toolbar_edit_user">Edit User Data</string>
    <string name="toast_enter_name">Please enter full name</string>
    <string name="toast_record_saved">Record successfully saved!</string>
    <string name="toast_record_updated">Record successfully updated!</string>
    <string name="toast_select_gender">Please select a gender type</string>
    <string name="transaction_added_successfully">Transaction added successfully</string>
    <string name="transaction_updated_successfully">Transaction updated successfully</string>
    <string name="user_address">Address:</string>
    <string name="user_city">City:</string>
    <string name="user_comments">Comments:</string>
    <string name="user_created_on">User Created:</string>
    <string name="user_gender">Gender:</string>
    <string name="_id">Account ID:</string>
    <string name="user_information">User Information</string>
    <string name="user_name">Name:</string>
    <string name="user_phone">Phone:</string>
    <string name="user_phone1">Phone1:</string>
    <string name="user_phone2">Phone2:</string>
    <string name="description">Description</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="balances">Balance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="credit_plus">Credit(+)</string>
    <string name="debit_minus">Debit(-)</string>
    <string name="enter_the_amount">Please enter the amount</string>
    <string name="select_type_amount">Please select account type</string>
    <string name="transaction_information">Transaction Information</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="trans_created">Created On:</string>
    <string name="trans_deleted">Transaction deleted successfully</string>
    <string name="users_deleted">%1$s account deleted successfully</string>
    <string name="trans_delete_warning_msg">Do you really want to delete this transaction entry? This action cannot be undone and you will be unable to recover any data.</string>
    <string name="trans_bulk_delete_warning_msg">Do you really want to delete these %1$d transaction entries? This action cannot be undone and you will be unable to recover any data.</string>
    <string name="user_delete_warning_msg">Do you really want to delete this %1$s account? All transaction(s) associated with this account will also be permanently deleted and this action cannot be undone and you will be unable to recover any data.</string>
    <string name="no_user_account">THERE IS NO USER ACCOUNT</string>
    <string name="add_new_user_account">Click on Add User button to add user account</string>
    <string name="no_transaction_added">NO TRANSACTION ADDED</string>
    <string name="add_new_transaction">Click on Add button to add transaction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore Backup</string>
    <string name="under_progress">This feature is under progress</string>
    <string name="backup_complete">Backup Completed</string>
    <string name="restore_complete">Restore Completed</string>
    <string name="choose_backup">Choose Backup File</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="confirmation">Confirmation</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="pdf_generated">Successfully PDF file generated.</string>
    <string name="pdf_not_generated">There is no transaction for generate PDF file.</string>

    <!-- Preference Titles -->
    <string name="header_theme">Theme</string>
    <string name="header_general">General</string>

    <!-- Messages Preferences -->
    <string name="title_cache">Clear Caches</string>
    <string name="title_dark_mode">Dark Theme</string>
    <string name="title_light_mode">Light Theme</string>
    <string name="title_version">App Version</string>
    <string name="summary_dark_mode">Change theme to night mode</string>
    <string name="summary_light_mode">Change theme to day mode</string>
    <string name="summary_cache_size">Caches Size: %1$s</string>
    <string name="summary_version">%1$s (%2$d)</string>
    <string name="settings">Settings</string>
    <string name="exit">EXIT</string>

    <string name="ad_app_id">ca-app-pub-0672688958454166~8048857080</string>
    <string name="ad_banner_id">ca-app-pub-0672688958454166/7293645782</string>
    <string name="ad_interstitial_id">ca-app-pub-0672688958454166/2340182486</string>
    <string name="ad_rewarded_id">ca-app-pub-0672688958454166/1710562874</string>
    <string name="last_modified_type">Modified Type:</string>
    <string name="last_modified_value">Modified Value:</string>

    <string name="summary_activate_lock">Secure your data with pin code or fingerprint lock</string>
    <string name="summary_deactivate_lock">Disable lock screen</string>
    <string name="title_lock">Lock Screen</string>
</resources>