<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_theme">

        <SwitchPreferenceCompat
            app:fontFamily="@font/roboto"
            app:iconSpaceReserved="false"
            app:key="darkTheme"
            app:summaryOff="@string/summary_dark_mode"
            app:summaryOn="@string/summary_light_mode"
            app:title="@string/title_dark_mode" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_general">

        <SwitchPreferenceCompat
            app:fontFamily="@font/roboto"
            app:iconSpaceReserved="false"
            app:key="lockScreen"
            app:summaryOff="@string/summary_activate_lock"
            app:summaryOn="@string/summary_deactivate_lock"
            app:title="@string/title_lock" />

        <Preference
            app:fontFamily="@font/roboto"
            app:iconSpaceReserved="false"
            app:key="clearCaches"
            app:summary="@string/summary_cache_size"
            app:title="@string/title_cache" />

        <Preference
            app:fontFamily="@font/roboto"
            app:iconSpaceReserved="false"
            app:key="appVersion"
            app:summary="@string/title_version"
            app:title="@string/title_version" />

    </PreferenceCategory>
</PreferenceScreen>