<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_baseline_backup"
            android:title="@string/menu_backup" />
        <item
            android:id="@+id/nav_restore"
            android:icon="@drawable/ic_baseline_backup_restore"
            android:title="@string/menu_restore" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app"
            android:title="@string/exit" />
    </group>
</menu>