<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        style="@style/Theme.RoseSimpleAccounting.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    style="@style/Widget.MaterialComponents.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/user_information"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_id"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_gender"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_address"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_city"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_phone1"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserPhone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_phone2"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserPhone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_comments"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_created_on"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserCreated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_modified"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/dialogUserModified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/_id"
                        android:textColor="@android:color/black" />
                </TableRow>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="end">

                    <Button
                        android:id="@+id/btnOk"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@android:string/ok"
                        android:textAllCaps="true"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>